--- a/AEF_Final_Exam_2022.Rmd
+++ b/AEF_Final_Exam_2022.Rmd
@@ -685,12 +685,17 @@ Based on this, we have that optimizing a portfolio composed of a large number of
 
 ```{r}
 
-US_Stocks <- US_Stocks %>% group_by(permno)
 
-compute_portfolio_weights <- function(theta,
+
+N<-US_Stocks$permno %>% unique() %>% length
+theta<-rep(1,3)
+Sub_US_Stocks<-US_Stocks %>% filter(month<"2016-01-01")
+
+
+compute_parametric_portfolio_weights <- function(theta,
                                       data) {
   data %>%
-    # group_by(month) %>%
+    group_by(month) %>%
     mutate(
       characteristic_tilt = beta*theta[1]+size*theta[2]+bm*theta[3]
     )%>%
@@ -698,20 +703,89 @@ compute_portfolio_weights <- function(theta,
       # Definition of benchmark weight
       weight_benchmark = 1/N,
        # Parametric portfolio weights
-      weight_tilt = weight_benchmark + characteristic_tilt, 
-      # Weights sum up to 1
-      weight_tilt = weight_tilt / sum(weight_tilt) 
+      weight_tilt = weight_benchmark + characteristic_tilt/N
     ) %>%
     ungroup()
 }
 
 
 
-view(compute_portfolio_weights(theta,US_Stocks))
+utility_function <- function(r, gamma = gamma_default) { 
+  # (mean(r))^(1 - gamma) / (1 - gamma)
+  mean(r)-gamma/2*var(r)
+}
+
+
+evaluate_portfolio <- function(weights_parametric_portfolio){
+ tmp<-weights_parametric_portfolio %>% 
+    mutate(return_x_w = ret_excess * weight_tilt) %>%
+    group_by(month) %>%
+    summarise(across(return_x_w, sum)) %>%
+    mutate(Rp = return_x_w+1)
+ tmp
+  # return(-utility_function(tmp$Rp))
+}
+
+
+compute_objective_function <- function(theta,
+                                       data) {
+  processed_data <- compute_parametric_portfolio_weights(
+    theta,
+    data
+  )
+
+  objective_function <- evaluate_portfolio(processed_data)
+
+  return(-objective_function)
+}
+
+
+optimal_theta <- optim(
+  par = theta, 
+  compute_objective_function,
+  data = Sub_US_Stocks
+)
+
+optimal_theta$par 
+
+view(compute_parametric_portfolio_weights(theta, Sub_US_Stocks))
+max((compute_parametric_portfolio_weights(theta, Sub_US_Stocks))$weight_tilt/0.125)
+min((compute_parametric_portfolio_weights(theta, Sub_US_Stocks))$weight_tilt/0.125)
+
+compute_objective_function(c(2415384027600149,  1259332216136819, -3175254693880788),Sub_US_Stocks)
+
+
+tmp<-compute_parametric_portfolio_weights(theta,US_Stocks) 
+tmp
+
+sum(tmp$weight_tilt*(1+tmp$ret_excess))
+
+(US_Stocks %>% filter(month =="2015-01-01"))$size %>% mean()
+
+sum(tmp$weight_tilt)
 
 
 
+# Test utility
 
+
+
+#Test weights
+compute_parametric_portfolio_weights(theta,US_Stocks) %>% view()
+
+#Test evaluate
+((evaluate_portfolio(compute_parametric_portfolio_weights(theta,US_Stocks)))$Rp %>%mean())#-2*((evaluate_portfolio(compute_parametric_portfolio_weights(theta,US_Stocks)))$Rp %>%var())
+((evaluate_portfolio(compute_parametric_portfolio_weights(theta,US_Stocks)))$Rp %>%sd())
+
+
+-0.025107100793
+
+
+tmp2<-(compute_parametric_portfolio_weights(theta,US_Stocks)%>% filter(month == "2000-01-01") %>% select("ret_excess", "weight_tilt"))$weight_tilt
+
+cbind(tmp1,tmp2)
+
+sum(tmp1*tmp2)
 
 
 
