--- a/AEF_Final_Exam_2022.Rmd
+++ b/AEF_Final_Exam_2022.Rmd
@@ -819,62 +819,59 @@ If we look at the function for the simple linear specification for the portfolio
 
 #Define the number of stocks
 N<-US_Stocks$permno %>% unique() %>% length
-theta<-rep(1,3)
+#Define an initial guess of theta
+theta<-rep(1.5,3)
+#Generate a subset of the data with dates 2015-12-31 or earlier
 Sub_US_Stocks<-US_Stocks %>% filter(month<"2016-01-01")
 
-
-compute_parametric_portfolio_weights <- function(theta,
-                                      data) {
+#Define function to compute the portfolio weights
+compute_parametric_portfolio_weights <- function(theta,  data) {
   data %>%
-    group_by(month) %>%
-    mutate(
-      characteristic_tilt = beta*theta[1]+size*theta[2]+bm*theta[3]
+  group_by(month) %>%
+  mutate(
+    characteristic_tilt = beta*theta[1]+size*theta[2]+bm*theta[3]
     )%>%
-    mutate(
-      # Definition of benchmark weight
-      weight_benchmark = 1/N,
-       # Parametric portfolio weights
-      weight_tilt = weight_benchmark + characteristic_tilt/N,
-      # Limit to no short positions
-       weight_tilt = pmax(0, weight_tilt),
-      #Make protfolio weights balance to 1
-        weight_tilt =  weight_tilt/sum( weight_tilt)
+  mutate(
+    # Definition of benchmark weight
+    weight_benchmark = 1/N,
+    # Parametric portfolio weights
+    weight_tilt = weight_benchmark + characteristic_tilt/N
     ) %>%
-    ungroup()
+  ungroup()
 }
 
 
-
+# Define the certainty equivalent function to be the utility that must be maximized
 utility_function <- function(r, gamma = gamma_default) { 
-  # (mean(r))^(1 - gamma) / (1 - gamma)
   mean(r)-gamma/2*var(r)
 }
 
-
+# Define a function to evaluate the portfolio return by generating af vector of monthly gross returns and returning it
 evaluate_portfolio <- function(weights_parametric_portfolio){
  tmp<-weights_parametric_portfolio %>% 
     mutate(return_x_w = ret_excess * weight_tilt) %>%
     group_by(month) %>%
     summarise(across(return_x_w, sum)) %>%
     mutate(Rp = return_x_w+1)
- tmp
-  # return(-utility_function(tmp$Rp))
+  return(tmp$Rp)
 }
 
-
+# Function that gathers the framework and allows "optim" to maximize the utility by adjusting theta 
 compute_objective_function <- function(theta,
                                        data) {
+  #Use the compute_parametric_portfolio_weights function to calculate the portfolio weights given theta
   processed_data <- compute_parametric_portfolio_weights(
     theta,
     data
   )
-
-  objective_function <- evaluate_portfolio(processed_data)
-
+  # Use the evaluate_portfolio function to generate the gross returns for the utility function and pipe this vector to the utility function
+  objective_function <- evaluate_portfolio(processed_data) %>% utility_function()
+  
+  #Return that negative of the objective as optim minimizes per default
   return(-objective_function)
 }
 
-
+# Run optim to determine theta_hat
 optimal_theta <- optim(
   par = theta, 
   compute_objective_function,
@@ -883,18 +880,9 @@ optimal_theta <- optim(
 
 optimal_theta$par 
 
+mean(evaluate_portfolio(compute_parametric_portfolio_weights(optimal_theta$par ,Sub_US_Stocks))-1)
 
 
-# Test utility
-
-
-
-#Test weights
-compute_parametric_portfolio_weights(theta,US_Stocks) %>% view()
-
-#Test evaluate
-((evaluate_portfolio(compute_parametric_portfolio_weights(theta,US_Stocks)))$Rp %>%mean())#-2*((evaluate_portfolio(compute_parametric_portfolio_weights(theta,US_Stocks)))$Rp %>%var())
-((evaluate_portfolio(compute_parametric_portfolio_weights(theta,US_Stocks)))$Rp %>%sd())
 
 
 ```
